@@ -19,9 +19,9 @@ import java.util.ArrayList;
 import java.util.List;
 import javax.inject.Inject;
 
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.LinkedListMultimap;
 import com.google.gwt.core.client.GWT;
+import com.google.gwt.safehtml.shared.SafeHtmlBuilder;
 import elemental.dom.Element;
 import org.jboss.gwt.elemento.core.Elements;
 import org.jboss.hal.ballroom.LayoutBuilder;
@@ -34,8 +34,10 @@ import org.jboss.hal.meta.MetadataRegistry;
 import org.jboss.hal.resources.Constants;
 import org.jboss.hal.resources.IdBuilder;
 import org.jboss.hal.resources.Names;
+import org.jboss.hal.resources.Resources;
 
 import static java.util.Arrays.asList;
+import static java.util.stream.Collectors.toList;
 import static org.jboss.hal.client.configuration.subsystem.datasource.AddressTemplates.DATA_SOURCE_TEMPLATE;
 import static org.jboss.hal.client.configuration.subsystem.datasource.AddressTemplates.XA_DATA_SOURCE_TEMPLATE;
 import static org.jboss.hal.client.configuration.subsystem.datasource.Attribute.Scope.BOTH;
@@ -157,6 +159,7 @@ public class DataSourceView extends PatternFlyViewImpl implements DataSourcePres
         ));
     }
 
+    private final Resources resources;
     private final List<Form<DataSource>> nonXaForms;
     private final List<Form<DataSource>> xaForms;
     private final Element header;
@@ -167,8 +170,8 @@ public class DataSourceView extends PatternFlyViewImpl implements DataSourcePres
     private DataSourcePresenter presenter;
 
     @Inject
-    @SuppressWarnings("Guava")
-    public DataSourceView(MetadataRegistry metadataRegistry) {
+    public DataSourceView(MetadataRegistry metadataRegistry, Resources resources) {
+        this.resources = resources;
 
         Metadata nonXaMeta = metadataRegistry.lookup(DATA_SOURCE_TEMPLATE);
         Metadata xaMeta = metadataRegistry.lookup(XA_DATA_SOURCE_TEMPLATE);
@@ -188,9 +191,10 @@ public class DataSourceView extends PatternFlyViewImpl implements DataSourcePres
             List<Attribute> sectionAttributes = attributes.get(section);
 
             // non xa form and tab
-            List<String> nonXaNames = FluentIterable.from(sectionAttributes)
+            List<String> nonXaNames = sectionAttributes.stream()
                     .filter(attribute -> attribute.scope == BOTH || attribute.scope == NON_XA)
-                    .transform(attribute -> attribute.name).toList();
+                    .map(attribute -> attribute.name)
+                    .collect(toList());
             form = new ModelNodeForm.Builder<DataSource>(IdBuilder.build(DATA_SOURCE, "form", sectionId), nonXaMeta)
                     .include(nonXaNames)
                     .onSave(saveCallback)
@@ -199,9 +203,10 @@ public class DataSourceView extends PatternFlyViewImpl implements DataSourcePres
             nonXaTabs.add(IdBuilder.build(DATA_SOURCE, "tab", sectionId), section, form.asElement());
 
             // xa form and tab
-            List<String> xaNames = FluentIterable.from(sectionAttributes)
+            List<String> xaNames = sectionAttributes.stream()
                     .filter(attribute -> attribute.scope == BOTH || attribute.scope == XA)
-                    .transform(attribute -> attribute.name).toList();
+                    .map(attribute -> attribute.name)
+                    .collect(toList());
             form = new ModelNodeForm.Builder<DataSource>(IdBuilder.build(XA_DATA_SOURCE, "form", sectionId), xaMeta)
                     .include(xaNames)
                     .onSave(saveCallback)
@@ -255,7 +260,15 @@ public class DataSourceView extends PatternFlyViewImpl implements DataSourcePres
     public void update(final DataSource dataSource) {
         // TODO Add a suggestion handler for the DRIVER_NAME field
         showHide(dataSource.isXa());
-        header.setTextContent(dataSource.getName());
+        //noinspection HardCodedStringLiteral
+        header.setInnerHTML(new SafeHtmlBuilder()
+                .appendEscaped(dataSource.getName())
+                .appendHtmlConstant("<small>")
+                .appendEscaped(" (")
+                .appendEscaped(dataSource.isEnabled() ? resources.constants().enabled() : resources.constants().disabled())
+                .appendEscaped(")")
+                .appendHtmlConstant("</small>")
+                .toSafeHtml().asString());
         if (dataSource.isXa()) {
             for (Form<DataSource> form : xaForms) {
                 form.view(dataSource);
