@@ -24,7 +24,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
 import com.google.gwt.core.client.GWT;
@@ -43,9 +42,11 @@ import org.jboss.gwt.elemento.core.LazyElement;
 import org.jboss.hal.meta.security.SecurityContext;
 import org.jboss.hal.meta.security.SecurityContextAware;
 import org.jboss.hal.resources.Constants;
+import org.jboss.hal.resources.Icons;
 import org.jboss.hal.resources.IdBuilder;
 import org.jboss.hal.resources.Messages;
 
+import static java.util.stream.Collectors.toList;
 import static org.jboss.gwt.elemento.core.EventType.click;
 import static org.jboss.hal.ballroom.form.Form.Operation.*;
 import static org.jboss.hal.ballroom.form.Form.State.EDITING;
@@ -123,7 +124,8 @@ public class DefaultForm<T> extends LazyElement implements Form<T>, SecurityCont
         helpTexts.put(label, description);
     }
 
-    public void addFormValidation(FormValidation formValidation) {
+    @Override
+    public void addFormValidation(FormValidation<T> formValidation) {
         formValidations.add(formValidation);
     }
 
@@ -194,7 +196,7 @@ public class DefaultForm<T> extends LazyElement implements Form<T>, SecurityCont
         // @formatter:off
         Elements.Builder errorPanelBuilder = new Elements.Builder()
             .div().css(alert, alertDanger).rememberAs("errorPanel")
-                .span().css(pfIcon(errorCircleO)).end()
+                .span().css(Icons.ERROR).end()
                 .span().rememberAs(ERROR_MESSAGE).end()
                 .ul().rememberAs(ERROR_MESSAGES).end()
             .end();
@@ -217,7 +219,8 @@ public class DefaultForm<T> extends LazyElement implements Form<T>, SecurityCont
             // @formatter:off
             editPanel.appendChild(new Elements.Builder()
                 .div().css(formGroup)
-                    .div().css(column(inputColumns), offset(labelColumns))
+                    .div().css(column(inputColumns, columnLg, columnMd, columnSm),
+                               offset(labelColumns, columnLg, columnMd, columnSm))
                         .span().css(helpBlock)
                             .innerHtml(MESSAGES.requiredHelp())
                         .end()
@@ -230,7 +233,7 @@ public class DefaultForm<T> extends LazyElement implements Form<T>, SecurityCont
         // @formatter:off
         Element buttons = new Elements.Builder()
             .div().css(formGroup, formButtons)
-                .div().css(offset(labelColumns), column(inputColumns))
+                .div().css(offset(labelColumns), column(inputColumns, columnLg, columnMd, columnSm))
                     .div().css(pullRight)
                         .button().css(btn, btnHal, btnDefault).on(click, event -> cancel())
                             .textContent(CONSTANTS.cancel())
@@ -258,7 +261,7 @@ public class DefaultForm<T> extends LazyElement implements Form<T>, SecurityCont
     // ------------------------------------------------------ form operations
 
     /**
-     * Executes the {@link org.jboss.hal.ballroom.form.Form.Operation#ADD} operation and calls {@link
+     * Executes the {@link Operation#ADD} operation and calls {@link
      * DataMapping#newModel(Object, Form)}.
      *
      * @param model the transient model
@@ -278,7 +281,7 @@ public class DefaultForm<T> extends LazyElement implements Form<T>, SecurityCont
     }
 
     /**
-     * Executes the {@link org.jboss.hal.ballroom.form.Form.Operation#VIEW} operation and calls {@link
+     * Executes the {@link Operation#VIEW} operation and calls {@link
      * DataMapping#populateFormItems(Object, Form)}.
      *
      * @param model the model to view.
@@ -297,7 +300,7 @@ public class DefaultForm<T> extends LazyElement implements Form<T>, SecurityCont
     }
 
     /**
-     * Removes the model reference, executes the {@link org.jboss.hal.ballroom.form.Form.Operation#CLEAR} operation and
+     * Removes the model reference, executes the {@link Operation#CLEAR} operation and
      * calls {@link DataMapping#clearFormItems(Form)}.
      */
     @Override
@@ -309,9 +312,9 @@ public class DefaultForm<T> extends LazyElement implements Form<T>, SecurityCont
     }
 
     /**
-     * Executes the {@link org.jboss.hal.ballroom.form.Form.Operation#RESET} operation, calls {@link
+     * Executes the {@link Operation#RESET} operation, calls {@link
      * DataMapping#resetModel(Object, Form)} and finally calls the registered {@linkplain
-     * org.jboss.hal.ballroom.form.Form.ResetCallback reset callback} (if any).
+     * ResetCallback reset callback} (if any).
      */
     @Override
     public final void reset() {
@@ -332,7 +335,7 @@ public class DefaultForm<T> extends LazyElement implements Form<T>, SecurityCont
     }
 
     /**
-     * Executes the {@link org.jboss.hal.ballroom.form.Form.Operation#EDIT} operation and calls {@link
+     * Executes the {@link Operation#EDIT} operation and calls {@link
      * DataMapping#populateFormItems(Object, Form)}.
      *
      * @param model the model to edit.
@@ -352,9 +355,9 @@ public class DefaultForm<T> extends LazyElement implements Form<T>, SecurityCont
     }
 
     /**
-     * Upon successful validation, executes the {@link org.jboss.hal.ballroom.form.Form.Operation#SAVE} operation,
+     * Upon successful validation, executes the {@link Operation#SAVE} operation,
      * calls {@link DataMapping#persistModel(Object, Form)} and finally calls the registered {@linkplain
-     * org.jboss.hal.ballroom.form.Form.SaveCallback save callback} (if any).
+     * SaveCallback save callback} (if any).
      */
     @Override
     public final boolean save() {
@@ -377,19 +380,20 @@ public class DefaultForm<T> extends LazyElement implements Form<T>, SecurityCont
         this.saveCallback = saveCallback;
     }
 
-    private Map<String, Object> getChangedValues() {
+    protected Map<String, Object> getChangedValues() {
         Map<String, Object> changed = new HashMap<>();
         for (Map.Entry<String, FormItem> entry : formItems.entrySet()) {
-            if (entry.getValue().isModified()) {
-                changed.put(entry.getKey(), entry.getValue().getValue());
+            FormItem formItem = entry.getValue();
+            if (formItem.isModified()) {
+                changed.put(entry.getKey(), formItem.getValue());
             }
         }
         return changed;
     }
 
     /**
-     * Executes the {@link org.jboss.hal.ballroom.form.Form.Operation#CANCEL} operation and calls the registered
-     * {@linkplain org.jboss.hal.ballroom.form.Form.CancelCallback cancel callback} (if any).
+     * Executes the {@link Operation#CANCEL} operation and calls the registered
+     * {@linkplain CancelCallback cancel callback} (if any).
      */
     @Override
     public final void cancel() {
@@ -513,10 +517,9 @@ public class DefaultForm<T> extends LazyElement implements Form<T>, SecurityCont
 
     @Override
     public Iterable<FormItem> getBoundFormItems() {
-        //noinspection Guava
-        return FluentIterable.from(formItems.values())
+        return formItems.values().stream()
                 .filter(formItem -> !unboundItems.contains(formItem.getName()))
-                .toList();
+                .collect(toList());
     }
 
     @Override
@@ -549,7 +552,7 @@ public class DefaultForm<T> extends LazyElement implements Form<T>, SecurityCont
         // validate form on its own
         List<String> messages = new ArrayList<>();
         for (FormValidation validationHandler : formValidations) {
-            ValidationResult validationResult = validationHandler.validate(getFormItems());
+            ValidationResult validationResult = validationHandler.validate(this);
             if (!validationResult.isValid()) {
                 messages.add(validationResult.getMessage());
             }
