@@ -23,7 +23,6 @@ import java.util.Stack;
 import javax.inject.Inject;
 import javax.inject.Provider;
 
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.Sets;
 import com.google.web.bindery.event.shared.EventBus;
 import elemental.client.Browser;
@@ -68,6 +67,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import static elemental.css.CSSStyleDeclaration.Unit.PX;
+import static java.util.stream.Collectors.toList;
 import static org.jboss.gwt.elemento.core.EventType.click;
 import static org.jboss.hal.ballroom.js.JsHelper.asList;
 import static org.jboss.hal.core.ui.Skeleton.MARGIN_BIG;
@@ -134,7 +134,7 @@ public class ModelBrowser implements HasElements {
 
         @Override
         public void onError(final Throwable error) {
-            MessageEvent.fire(eventBus, Message.error(resources.constants().metadataError(), error.getMessage()));
+            MessageEvent.fire(eventBus, Message.error(resources.messages().metadataError(), error.getMessage()));
         }
     }
 
@@ -315,9 +315,9 @@ public class ModelBrowser implements HasElements {
             FilterInfo previousFilter = filterStack.pop();
             filter(filterStack.isEmpty() ? FilterInfo.ROOT : filterStack.peek());
 
-            List<OpenNodeFunction> functions = FluentIterable
-                    .from(previousFilter.parents)
-                    .transform(OpenNodeFunction::new).toList();
+            List<OpenNodeFunction> functions = previousFilter.parents.stream()
+                    .map(OpenNodeFunction::new)
+                    .collect(toList());
             Outcome<FunctionContext> outcome = new Outcome<FunctionContext>() {
                 @Override
                 public void onFailure(final FunctionContext context) {
@@ -403,7 +403,7 @@ public class ModelBrowser implements HasElements {
     void add(final Node<Context> parent, final List<String> children) {
         if (parent.data.hasSingletons()) {
             if (parent.data.getSingletons().size() == children.size()) {
-                MessageEvent.fire(eventBus, Message.warning(resources.constants().allSingletonsExist()));
+                MessageEvent.fire(eventBus, Message.warning(resources.messages().allSingletonsExist()));
 
             } else if (parent.data.getSingletons().size() - children.size() == 1) {
                 // no need to show a wizard - find the missing singleton
@@ -557,8 +557,8 @@ public class ModelBrowser implements HasElements {
 
                 (operation, failure) -> {
                     emptyTree();
-                    MessageEvent.fire(eventBus, Message.error(resources.constants().unknownResource(),
-                            resources.messages().unknownResource(root.toString(), failure)));
+                    MessageEvent.fire(eventBus, Message.error(resources.messages().unknownResource(),
+                            resources.messages().unknownResourceDetails(root.toString(), failure)));
 
                     Browser.getWindow().setOnresize(event -> adjustHeight());
                     adjustHeight();
@@ -566,8 +566,8 @@ public class ModelBrowser implements HasElements {
 
                 (operation, exception) -> {
                     emptyTree();
-                    MessageEvent.fire(eventBus, Message.error(resources.constants().unknownResource(),
-                            resources.messages().unknownResource(root.toString(), exception.getMessage())));
+                    MessageEvent.fire(eventBus, Message.error(resources.messages().unknownResource(),
+                            resources.messages().unknownResourceDetails(root.toString(), exception.getMessage())));
 
                     Browser.getWindow().setOnresize(event -> adjustHeight());
                     adjustHeight();
